--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ sudo: false
 cache: bundler
 language: ruby
 bundler_args: --quiet
+services:
+  - mysql
+  - postgresql
 script:
   - bundle exec rake
 rvm:
